# enklayve

./: .eslintrc.cjs  .gitignore  .mcp.json  .prettierignore  BUILD-SPEC.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
.claude/: settings.json
.github/workflows/: _data-refresh.yml  ci.yml  deploy.yml  refresh-cpi.yml  refresh-hhs.yml  refresh-irs.yml  refresh-medicaid.yml  refresh-snap.yml  refresh-ssa.yml  refresh-state-al.yml  refresh-state-ar.yml  refresh-state-az.yml  refresh-state-ca.yml  refresh-state-co.yml  refresh-state-ct.yml  refresh-state-dc.yml  refresh-state-de.yml  refresh-state-ga.yml  refresh-state-hi.yml  refresh-state-ia.yml  refresh-state-id.yml  refresh-state-il.yml  refresh-state-in.yml  refresh-state-ks.yml  refresh-state-ky.yml  refresh-state-la.yml  refresh-state-ma.yml  refresh-state-md.yml  refresh-state-me.yml  refresh-state-mi.yml  refresh-state-mn.yml  refresh-state-mo.yml  refresh-state-ms.yml  refresh-state-mt.yml  refresh-state-nc.yml  refresh-state-nd.yml  refresh-state-ne.yml  refresh-state-nj.yml  refresh-state-nm.yml  refresh-state-ny.yml  (+13 more)
data/: aca-2024.json  aca-2024.json.sha256  amt-2024.json  amt-2024.json.sha256  capital-gains-2024.json  capital-gains-2024.json.sha256  cpi-u-annual.json  cpi-u-annual.json.sha256  education-credits-2024.json  education-credits-2024.json.sha256  eitc-ctc-2024.json  eitc-ctc-2024.json.sha256  fafsa-2024-2025.json  fafsa-2024-2025.json.sha256  federal-income-tax-2024.json  federal-income-tax-2024.json.sha256  federal-poverty-level-2024-alaska.json  federal-poverty-level-2024-alaska.json.sha256  federal-poverty-level-2024-contiguous.json  federal-poverty-level-2024-contiguous.json.sha256  federal-poverty-level-2024-hawaii.json  federal-poverty-level-2024-hawaii.json.sha256  fica-2024.json  fica-2024.json.sha256  gift-tax-2024.json  gift-tax-2024.json.sha256  ira-deduction-2024.json  ira-deduction-2024.json.sha256  kiddie-tax-2024.json  kiddie-tax-2024.json.sha256  manifest.json  medicaid-2024.json  medicaid-2024.json.sha256  retirement-limits-2024.json  retirement-limits-2024.json.sha256  rmd-uniform-lifetime-2024.json  rmd-uniform-lifetime-2024.json.sha256  savers-credit-2024.json  savers-credit-2024.json.sha256  snap-fy2024-contiguous.json  (+109 more)
docs/: adding-a-state.md  contributing.md  data-sources.md  launch-checklist.md  source-diff-log.md
docs/specs/: SPEC-2.md  SPEC-3-citations.md  SPEC-3-hardening.md  SPEC-3.md  SPEC.md  ZIP-TAX-SPEC.md
e2e/: app.spec.ts  responsive.spec.ts  robustness.spec.ts
enklayve-app/: package-lock.json  package.json  vite.config.ts
enklayve-app/src/: App.css  App.tsx
enklayve-app/src-tauri/: Cargo.toml  tauri.conf.json
enklayve-app/src-tauri/capabilities/: default.json
enklayve-app/src-tauri/icons/: icon.icns
enklayve-app/src-tauri/src/: backup.rs  biometric.rs  citations.rs  commands.rs  conversations.rs  database.rs  documents.rs  downloads.rs  embeddings.rs  encrypted_database.rs  encryption.rs  export.rs  hardware.rs  inference.rs  lib.rs  logger.rs  main.rs  model_cache.rs  model_selection.rs  models.rs  ocr.rs  onboarding.rs  reranker.rs  settings.rs  vector_search.rs
scripts/: audit-release.ts  build-manifest.ts  og-image.ts  screenshots.ts  service-worker.ts  sitemap.ts  tool-pages.ts  tools-index.ts
scripts/refresh/: adapters.ts  contract.ts  run.ts
src/: main.ts  styles.css
src/data/: browser.ts  index.ts  integrity.ts  loader.ts  schemas.ts  usStates.ts
src/engine/: amt.ts  benefits.ts  capitalGains.ts  childTax.ts  citation.ts  costBasis.ts  dueDates.ts  educationCredits.ts  fafsa.ts  finance.ts  giftTax.ts  index.ts  inflation.ts  iraDeduction.ts  kiddieTax.ts  money.ts  plan.ts  rmd.ts  savingsBond.ts  socialSecurity.ts  socialSecurityTax.ts  taxMoves.ts
src/profile/: portable.ts  situation.ts
src/readout/: extract.ts  extractText.ts  report.ts  toSituation.ts  types.ts
src/tiles/: acaPtc.ts  amtScreener.ts  autoLoan.ts  backdoorRoth.ts  balanceTransfer.ts  budgetOverview.ts  capitalGains.ts  cashFlow.ts  childTax.ts  childTaxCredit.ts  collegeCost.ts  compoundGrowth.ts  contractVsSalary.ts  debtFreedom.ts  disability.ts  downshift.ts  drawdown.ts  educationCredits.ts  eitc.ts  estateChecklist.ts  fafsaSai.ts  federalIncomeTax.ts  fpl.ts  freedomDate.ts  freelanceRate.ts  giftTax.ts  healthPlan.ts  homeAffordability.ts  hourlySalary.ts  hub.ts  inflation.ts  iraDeduction.ts  kiddieTax.ts  lifeInsurance.ts  loanAmortization.ts  lotPicker.ts  marginalExplorer.ts  medicaid.ts  owedScreener.ts  owedShared.ts  (+28 more)
src/ui/: charts.ts  commandPalette.ts  countup.ts  dom.ts  explainer.ts  form.ts  fuzzy.ts  readoutView.ts  reportView.ts  resultCard.ts  router.ts  sensitivity.ts  shell.ts  situationPanel.ts  theme.ts
tests/: citation.test.ts  data.test.ts  money.test.ts  smoke.test.ts  worker.test.ts
tests/engine/: educationChild.test.ts  educationKiddie.test.ts  extensibility.test.ts  federalTaxDeduction.test.ts  filingStatusFallback.test.ts  horizonCaps.test.ts  invariants.test.ts  propertyInvariants.test.ts  screeners.test.ts
tests/golden/: benefits.test.ts  capitalGains.test.ts  costBasis.test.ts  deductions.test.ts  fafsa.test.ts  federal.test.ts  finance.test.ts  inflation.test.ts  plan.test.ts  rmd.test.ts  savingsBond.test.ts  selfEmployment.test.ts  snapshot.json  snapshot.test.ts  socialSecurity.test.ts  socialSecurityTax.test.ts  states.test.ts  taxMoves.test.ts
tests/helpers/: datasets.ts
tests/profile/: portable.test.ts  situation.test.ts
tests/readout/: extract.test.ts  extractText.test.ts  report.test.ts
tests/ui/: accessibility.test.ts  assumptionHint.test.ts  commandPalette.test.ts  countup.test.ts  dialogVisibility.test.ts  expansionTiles.test.ts  fuzzy.test.ts  hub.test.ts  longHorizonTiles.test.ts  lotDebtPaycheckTiles.test.ts  owedTiles.test.ts  pillar1Tiles.test.ts  profileIntegration.test.ts  promise.test.ts  protectionRothTiles.test.ts  readoutView.test.ts  reportView.test.ts  router.test.ts  (+11 more)
website/: index.html
worker/: index.ts
(+25 files in other folders)
